--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-pandas==1.5.3
 requests==2.28.2
 numpy==1.24.2
 pyyaml==6.0
 python-dotenv==1.0.0
 matplotlib==3.7.1
 apscheduler==3.11.0
+yfinance>=0.2.36
+pandas>=2.0.0
