Setting up fundamental_analyst. Added a log file to check new updates

--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -16,12 +16,12 @@ data:
   update_frequency: "daily"
 
 indicators:
-  - "GDP"
-  - "CPI"
-  - "UnemploymentRate"
-  - "Exports"
-  - "Imports"
-  - "TradeBalance"
+  - "GDP (quarterly)"
+  - "CPI (quarterly)"
+  - "UnemploymentRate (quarterly)"
+  - "Exports (quarterly)"
+  - "Imports (quarterly)"
+  - "TradeBalance (quarterly)"
 
 countries:
   - name: "brazil"
